# micro_cam

./: .gitignore  Clear-Compiled.ps1  Clear-Temp.ps1  README.md  cy_build.py  main.py  play_book.ipynb  pyproject.toml
data/: g_lib.toml  m_lib.toml
data/Gcode Files for Reference/: G-Code.csv  M-Code.csv  ProgramCodes.csv
data/Stl_testfiles/: frenchbulldog_head.stl
docker/: Dockerfile  build-container.ps1
functions/: __init__.py  file_writer.py  gcode.py  import_grid.py  import_stl.py  line_generator.py  mesh_config.py  mesh_line.py  mesh_object.py  mesh_parser.py  mesh_queue.py  mesh_stack.py  object_merger.py
notebooks/: binary_stl_structure.txt  mermaid.ipynb
notebooks/unused-ref/: algo_test.ipynb  coord_checker.py  csv_formatter.py  multi_link.txt  multi_notes.ipynb  testing.ipynb
profiles/: example.toml
services/: app_logger.py  compute_service.py
tests/: test_line_generator.py
util/: debugger.py  open_stl.py  plot.py
